parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID inicializar DOSPUNTOS declaracion function INICIO bloque FIN generarCuadruplos
Rule 2     generarCuadruplos -> <empty>
Rule 3     inicializar -> <empty>
Rule 4     guardarId -> <empty>
Rule 5     buscarId -> <empty>
Rule 6     cteid_declaracion -> ID cteidaux
Rule 7     cteidaux -> CORCHETEIZQ exp CORCHETEDER
Rule 8     cteidaux -> <empty>
Rule 9     buscarFuncion -> <empty>
Rule 10    bloquefun -> LLAVEIZQUIERDO declaracion insertVarCount insertQuadrupleCount bloqueaux regreso LLAVEDERECHO
Rule 11    insertQuadrupleCount -> <empty>
Rule 12    insertVarCount -> <empty>
Rule 13    tiporegreso -> tipo
Rule 14    tiporegreso -> VACIO
Rule 15    functionpam -> VAR tipo ID agregarParam functionpam2
Rule 16    functionpam -> <empty>
Rule 17    incrementParamCounter -> <empty>
Rule 18    addParamCount -> <empty>
Rule 19    agregarParam -> <empty>
Rule 20    functionpam2 -> COMA incrementParamCounter functionpam
Rule 21    functionpam2 -> incrementParamCounter
Rule 22    function -> FUNCION resetScope tiporegreso ID idFunctionCheck createGlobal PARENIZQUIERDO functionpam addParamCount PARENDERECHO bloquefun finishFun function
Rule 23    function -> <empty>
Rule 24    createGlobal -> <empty>
Rule 25    finishFun -> <empty>
Rule 26    resetScope -> <empty>
Rule 27    idFunctionCheck -> <empty>
Rule 28    cte -> ID getCurrentID symbol
Rule 29    cte -> CENTERO
Rule 30    cte -> CFLOTANTE
Rule 31    cte -> CCADENA
Rule 32    cte -> CCARACTER
Rule 33    cte -> VERDADERO
Rule 34    cte -> FALSO
Rule 35    symbol -> cteid
Rule 36    symbol -> verifyNullAssignment llamada
Rule 37    verifyNullAssignment -> <empty>
Rule 38    tipo -> ENTERO
Rule 39    tipo -> FLOTANTE
Rule 40    tipo -> CADENA
Rule 41    tipo -> CARACTER
Rule 42    tipo -> BOOL
Rule 43    declaracion -> VAR tipo cteid_declaracion revisarId PUNTOYCOMA countVar declaracion
Rule 44    declaracion -> <empty>
Rule 45    countVar -> <empty>
Rule 46    revisarId -> <empty>
Rule 47    regreso -> REGRESAR returnExp
Rule 48    regreso -> nullReturn
Rule 49    returnExp -> exp verifyReturnType PUNTOYCOMA addReturn
Rule 50    returnExp -> VACIO verifyReturnType PUNTOYCOMA addReturn
Rule 51    verifyReturnType -> <empty>
Rule 52    nullReturn -> <empty>
Rule 53    addReturn -> <empty>
Rule 54    bloque -> LLAVEIZQUIERDO bloqueaux LLAVEDERECHO
Rule 55    bloqueaux -> estatuto bloqueaux
Rule 56    bloqueaux -> <empty>
Rule 57    expresion -> negacion exp expresionaux
Rule 58    expresion -> color
Rule 59    exp -> termino checkExpTypes exp2
Rule 60    saveFunID -> <empty>
Rule 61    generateGoSub -> <empty>
Rule 62    verifyArgCount -> <empty>
Rule 63    generateERA -> <empty>
Rule 64    llamadapar -> exp validateArgs llamadaparaux
Rule 65    llamadapar -> <empty>
Rule 66    validateArgs -> <empty>
Rule 67    llamadaparaux -> COMA incrementK llamadapar
Rule 68    llamadaparaux -> incrementK
Rule 69    incrementK -> <empty>
Rule 70    asignacionizq -> ID saveVarID buscarId guardarId asignacionizqaux
Rule 71    saveVarID -> <empty>
Rule 72    asignacionizqaux -> CORCHETEIZQ exp CORCHETEDER
Rule 73    asignacionizqaux -> <empty>
Rule 74    asignacion -> asignacionizq ASIGNACION insertarAsignacion exp setAssignment PUNTOYCOMA
Rule 75    insertarAsignacion -> <empty>
Rule 76    setAssignment -> <empty>
Rule 77    estatuto -> ingreso
Rule 78    estatuto -> escritura
Rule 79    estatuto -> texto
Rule 80    estatuto -> rectangulo
Rule 81    estatuto -> circulo
Rule 82    estatuto -> ovalo
Rule 83    estatuto -> triangulo
Rule 84    estatuto -> punto
Rule 85    estatuto -> linea
Rule 86    estatuto -> curva
Rule 87    estatuto -> ID getCurrentID llamada PUNTOYCOMA
Rule 88    estatuto -> asignacion
Rule 89    estatuto -> condicion
Rule 90    estatuto -> ciclo
Rule 91    getCurrentID -> saveVarID
Rule 92    negacion -> NO
Rule 93    negacion -> <empty>
Rule 94    comparacion -> MENORQUE
Rule 95    comparacion -> MAYORQUE
Rule 96    comparacion -> MAYORIGUAL
Rule 97    comparacion -> MENORIGUAL
Rule 98    comparacion -> IGUAL
Rule 99    comparacion -> DIFERENTE
Rule 100   logico -> expresion checarLogico logicoAux
Rule 101   checarLogico -> <empty>
Rule 102   logicoAux -> CONJUNCION agregarLogico logico
Rule 103   logicoAux -> DISYUNCION agregarLogico logico
Rule 104   logicoAux -> <empty>
Rule 105   agregarLogico -> <empty>
Rule 106   checkRelopTypes -> <empty>
Rule 107   expresionaux -> comparacion addRelop exp checkRelopTypes
Rule 108   expresionaux -> <empty>
Rule 109   addRelop -> <empty>
Rule 110   checkExpTypes -> <empty>
Rule 111   addExp -> <empty>
Rule 112   exp2 -> SUMA addExp exp
Rule 113   exp2 -> RESTA addExp exp
Rule 114   exp2 -> <empty>
Rule 115   termino -> factor checkTermTypes termino2
Rule 116   checkTermTypes -> <empty>
Rule 117   termino2 -> MULTIPLICACION addFactor termino
Rule 118   termino2 -> DIVISION addFactor termino
Rule 119   termino2 -> <empty>
Rule 120   addFactor -> <empty>
Rule 121   factor -> PARENIZQUIERDO crearFondoFalso logico PARENDERECHO quitarFondoFalso
Rule 122   factor -> cte
Rule 123   llamada -> buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub
Rule 124   cteid -> buscarId cteidaux
Rule 125   crearFondoFalso -> <empty>
Rule 126   quitarFondoFalso -> <empty>
Rule 127   condicion -> SI PARENIZQUIERDO logico PARENDERECHO generarCond ENTONCES bloque condicionaux
Rule 128   generarCond -> <empty>
Rule 129   condicionaux -> SINO ENTONCES generarElse bloque rellenarCond
Rule 130   condicionaux -> rellenarCond
Rule 131   generarElse -> <empty>
Rule 132   rellenarCond -> <empty>
Rule 133   color -> NEGRO
Rule 134   color -> GRIS
Rule 135   color -> AZUL
Rule 136   color -> AMARILLO
Rule 137   color -> VERDE
Rule 138   color -> ROJO
Rule 139   color -> ROSA
Rule 140   color -> NARANJA
Rule 141   ciclo -> MIENTRAS insertarSalto PARENIZQUIERDO logico PARENDERECHO crearCiclo bloque crearRegreso
Rule 142   crearRegreso -> <empty>
Rule 143   crearCiclo -> <empty>
Rule 144   insertarSalto -> <empty>
Rule 145   escritura -> DESPLEGAR PARENIZQUIERDO expresion PARENDERECHO generarEscritura PUNTOYCOMA
Rule 146   generarEscritura -> <empty>
Rule 147   ingreso -> ENTRADA PARENIZQUIERDO ID saveVarID buscarId PARENDERECHO generarEntrada PUNTOYCOMA
Rule 148   generarEntrada -> <empty>
Rule 149   texto -> INSERTATEXTO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 150   rectangulo -> INSERTARECTANGULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 151   triangulo -> INSERTATRIANGULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 152   circulo -> INSERTACIRCULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 153   ovalo -> INSERTAOVALO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 154   punto -> INSERTAPUNTO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 155   linea -> INSERTALINEA getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
Rule 156   curva -> INSERTACURVA getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA

Terminals, with rules where they appear

AMARILLO             : 136
ASIGNACION           : 74
AZUL                 : 135
BOOL                 : 42
CADENA               : 40
CARACTER             : 41
CCADENA              : 31
CCARACTER            : 32
CENTERO              : 29
CFLOTANTE            : 30
COMA                 : 20 67
CONJUNCION           : 102
CORCHETEDER          : 7 72
CORCHETEIZQ          : 7 72
DESPLEGAR            : 145
DIFERENTE            : 99
DISYUNCION           : 103
DIVISION             : 118
DOSPUNTOS            : 1
ENTERO               : 38
ENTONCES             : 127 129
ENTRADA              : 147
FALSO                : 34
FIN                  : 1
FLOTANTE             : 39
FUNCION              : 22
GRIS                 : 134
ID                   : 1 6 15 22 28 70 87 147
IGUAL                : 98
INICIO               : 1
INSERTACIRCULO       : 152
INSERTACURVA         : 156
INSERTALINEA         : 155
INSERTAOVALO         : 153
INSERTAPUNTO         : 154
INSERTARECTANGULO    : 150
INSERTATEXTO         : 149
INSERTATRIANGULO     : 151
LLAVEDERECHO         : 10 54
LLAVEIZQUIERDO       : 10 54
MAYORIGUAL           : 96
MAYORQUE             : 95
MENORIGUAL           : 97
MENORQUE             : 94
MIENTRAS             : 141
MULTIPLICACION       : 117
NARANJA              : 140
NEGRO                : 133
NO                   : 92
PARENDERECHO         : 22 121 123 127 141 145 147 149 150 151 152 153 154 155 156
PARENIZQUIERDO       : 22 121 123 127 141 145 147 149 150 151 152 153 154 155 156
PROGRAMA             : 1
PUNTOYCOMA           : 43 49 50 74 87 145 147 149 150 151 152 153 154 155 156
REGRESAR             : 47
RESTA                : 113
ROJO                 : 138
ROSA                 : 139
SI                   : 127
SINO                 : 129
SUMA                 : 112
VACIO                : 14 50
VAR                  : 15 43
VERDADERO            : 33
VERDE                : 137
error                : 

Nonterminals, with rules where they appear

addExp               : 112 113
addFactor            : 117 118
addParamCount        : 22
addRelop             : 107
addReturn            : 49 50
agregarLogico        : 102 103
agregarParam         : 15
asignacion           : 88
asignacionizq        : 74
asignacionizqaux     : 70
bloque               : 1 127 129 141
bloqueaux            : 10 54 55
bloquefun            : 22
buscarFuncion        : 123 149 150 151 152 153 154 155 156
buscarId             : 70 124 147
checarLogico         : 100
checkExpTypes        : 59
checkRelopTypes      : 107
checkTermTypes       : 115
ciclo                : 90
circulo              : 81
color                : 58
comparacion          : 107
condicion            : 89
condicionaux         : 127
countVar             : 43
crearCiclo           : 141
crearFondoFalso      : 121
crearRegreso         : 141
createGlobal         : 22
cte                  : 122
cteid                : 35
cteid_declaracion    : 43
cteidaux             : 6 124
curva                : 86
declaracion          : 1 10 43
escritura            : 78
estatuto             : 55
exp                  : 7 49 57 64 72 74 107 112 113
exp2                 : 59
expresion            : 100 145
expresionaux         : 57
factor               : 115
finishFun            : 22
function             : 1 22
functionpam          : 20 22
functionpam2         : 15
generarCond          : 127
generarCuadruplos    : 1
generarElse          : 129
generarEntrada       : 147
generarEscritura     : 145
generateERA          : 123 149 150 151 152 153 154 155 156
generateGoSub        : 123 149 150 151 152 153 154 155 156
getCurrentID         : 28 87 149 150 151 152 153 154 155 156
guardarId            : 70
idFunctionCheck      : 22
incrementK           : 67 68
incrementParamCounter : 20 21
ingreso              : 77
inicializar          : 1
insertQuadrupleCount : 10
insertVarCount       : 10
insertarAsignacion   : 74
insertarSalto        : 141
linea                : 85
llamada              : 36 87
llamadapar           : 67 123 149 150 151 152 153 154 155 156
llamadaparaux        : 64
logico               : 102 103 121 127 141
logicoAux            : 100
negacion             : 57
nullReturn           : 48
ovalo                : 82
program              : 0
punto                : 84
quitarFondoFalso     : 121
rectangulo           : 80
regreso              : 10
rellenarCond         : 129 130
resetScope           : 22
returnExp            : 47
revisarId            : 43
saveFunID            : 123 149 150 151 152 153 154 155 156
saveVarID            : 70 91 147
setAssignment        : 74
symbol               : 28
termino              : 59 117 118
termino2             : 115
texto                : 79
tipo                 : 13 15 43
tiporegreso          : 22
triangulo            : 83
validateArgs         : 64
verifyArgCount       : 123 149 150 151 152 153 154 155 156
verifyNullAssignment : 36
verifyReturnType     : 49 50

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID inicializar DOSPUNTOS declaracion function INICIO bloque FIN generarCuadruplos

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID inicializar DOSPUNTOS declaracion function INICIO bloque FIN generarCuadruplos

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . inicializar DOSPUNTOS declaracion function INICIO bloque FIN generarCuadruplos
    (3) inicializar -> .

    DOSPUNTOS       reduce using rule 3 (inicializar -> .)

    inicializar                    shift and go to state 4

state 4

    (1) program -> PROGRAMA ID inicializar . DOSPUNTOS declaracion function INICIO bloque FIN generarCuadruplos

    DOSPUNTOS       shift and go to state 5


state 5

    (1) program -> PROGRAMA ID inicializar DOSPUNTOS . declaracion function INICIO bloque FIN generarCuadruplos
    (43) declaracion -> . VAR tipo cteid_declaracion revisarId PUNTOYCOMA countVar declaracion
    (44) declaracion -> .

    VAR             shift and go to state 6
    FUNCION         reduce using rule 44 (declaracion -> .)
    INICIO          reduce using rule 44 (declaracion -> .)

    declaracion                    shift and go to state 7

state 6

    (43) declaracion -> VAR . tipo cteid_declaracion revisarId PUNTOYCOMA countVar declaracion
    (38) tipo -> . ENTERO
    (39) tipo -> . FLOTANTE
    (40) tipo -> . CADENA
    (41) tipo -> . CARACTER
    (42) tipo -> . BOOL

    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 12
    CADENA          shift and go to state 10
    CARACTER        shift and go to state 9
    BOOL            shift and go to state 11

    tipo                           shift and go to state 8

state 7

    (1) program -> PROGRAMA ID inicializar DOSPUNTOS declaracion . function INICIO bloque FIN generarCuadruplos
    (22) function -> . FUNCION resetScope tiporegreso ID idFunctionCheck createGlobal PARENIZQUIERDO functionpam addParamCount PARENDERECHO bloquefun finishFun function
    (23) function -> .

    FUNCION         shift and go to state 15
    INICIO          reduce using rule 23 (function -> .)

    function                       shift and go to state 14

state 8

    (43) declaracion -> VAR tipo . cteid_declaracion revisarId PUNTOYCOMA countVar declaracion
    (6) cteid_declaracion -> . ID cteidaux

    ID              shift and go to state 17

    cteid_declaracion              shift and go to state 16

state 9

    (41) tipo -> CARACTER .

    ID              reduce using rule 41 (tipo -> CARACTER .)


state 10

    (40) tipo -> CADENA .

    ID              reduce using rule 40 (tipo -> CADENA .)


state 11

    (42) tipo -> BOOL .

    ID              reduce using rule 42 (tipo -> BOOL .)


state 12

    (39) tipo -> FLOTANTE .

    ID              reduce using rule 39 (tipo -> FLOTANTE .)


state 13

    (38) tipo -> ENTERO .

    ID              reduce using rule 38 (tipo -> ENTERO .)


state 14

    (1) program -> PROGRAMA ID inicializar DOSPUNTOS declaracion function . INICIO bloque FIN generarCuadruplos

    INICIO          shift and go to state 18


state 15

    (22) function -> FUNCION . resetScope tiporegreso ID idFunctionCheck createGlobal PARENIZQUIERDO functionpam addParamCount PARENDERECHO bloquefun finishFun function
    (26) resetScope -> .

    VACIO           reduce using rule 26 (resetScope -> .)
    ENTERO          reduce using rule 26 (resetScope -> .)
    FLOTANTE        reduce using rule 26 (resetScope -> .)
    CADENA          reduce using rule 26 (resetScope -> .)
    CARACTER        reduce using rule 26 (resetScope -> .)
    BOOL            reduce using rule 26 (resetScope -> .)

    resetScope                     shift and go to state 19

state 16

    (43) declaracion -> VAR tipo cteid_declaracion . revisarId PUNTOYCOMA countVar declaracion
    (46) revisarId -> .

    PUNTOYCOMA      reduce using rule 46 (revisarId -> .)

    revisarId                      shift and go to state 20

state 17

    (6) cteid_declaracion -> ID . cteidaux
    (7) cteidaux -> . CORCHETEIZQ exp CORCHETEDER
    (8) cteidaux -> .

    CORCHETEIZQ     shift and go to state 21
    PUNTOYCOMA      reduce using rule 8 (cteidaux -> .)

    cteidaux                       shift and go to state 22

state 18

    (1) program -> PROGRAMA ID inicializar DOSPUNTOS declaracion function INICIO . bloque FIN generarCuadruplos
    (54) bloque -> . LLAVEIZQUIERDO bloqueaux LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 23

    bloque                         shift and go to state 24

state 19

    (22) function -> FUNCION resetScope . tiporegreso ID idFunctionCheck createGlobal PARENIZQUIERDO functionpam addParamCount PARENDERECHO bloquefun finishFun function
    (13) tiporegreso -> . tipo
    (14) tiporegreso -> . VACIO
    (38) tipo -> . ENTERO
    (39) tipo -> . FLOTANTE
    (40) tipo -> . CADENA
    (41) tipo -> . CARACTER
    (42) tipo -> . BOOL

    VACIO           shift and go to state 27
    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 12
    CADENA          shift and go to state 10
    CARACTER        shift and go to state 9
    BOOL            shift and go to state 11

    tipo                           shift and go to state 25
    tiporegreso                    shift and go to state 26

state 20

    (43) declaracion -> VAR tipo cteid_declaracion revisarId . PUNTOYCOMA countVar declaracion

    PUNTOYCOMA      shift and go to state 28


state 21

    (7) cteidaux -> CORCHETEIZQ . exp CORCHETEDER
    (59) exp -> . termino checkExpTypes exp2
    (115) termino -> . factor checkTermTypes termino2
    (121) factor -> . PARENIZQUIERDO crearFondoFalso logico PARENDERECHO quitarFondoFalso
    (122) factor -> . cte
    (28) cte -> . ID getCurrentID symbol
    (29) cte -> . CENTERO
    (30) cte -> . CFLOTANTE
    (31) cte -> . CCADENA
    (32) cte -> . CCARACTER
    (33) cte -> . VERDADERO
    (34) cte -> . FALSO

    PARENIZQUIERDO  shift and go to state 30
    ID              shift and go to state 35
    CENTERO         shift and go to state 33
    CFLOTANTE       shift and go to state 32
    CCADENA         shift and go to state 37
    CCARACTER       shift and go to state 34
    VERDADERO       shift and go to state 36
    FALSO           shift and go to state 38

    cte                            shift and go to state 39
    termino                        shift and go to state 29
    exp                            shift and go to state 40
    factor                         shift and go to state 31

state 22

    (6) cteid_declaracion -> ID cteidaux .

    PUNTOYCOMA      reduce using rule 6 (cteid_declaracion -> ID cteidaux .)


state 23

    (54) bloque -> LLAVEIZQUIERDO . bloqueaux LLAVEDERECHO
    (55) bloqueaux -> . estatuto bloqueaux
    (56) bloqueaux -> .
    (77) estatuto -> . ingreso
    (78) estatuto -> . escritura
    (79) estatuto -> . texto
    (80) estatuto -> . rectangulo
    (81) estatuto -> . circulo
    (82) estatuto -> . ovalo
    (83) estatuto -> . triangulo
    (84) estatuto -> . punto
    (85) estatuto -> . linea
    (86) estatuto -> . curva
    (87) estatuto -> . ID getCurrentID llamada PUNTOYCOMA
    (88) estatuto -> . asignacion
    (89) estatuto -> . condicion
    (90) estatuto -> . ciclo
    (147) ingreso -> . ENTRADA PARENIZQUIERDO ID saveVarID buscarId PARENDERECHO generarEntrada PUNTOYCOMA
    (145) escritura -> . DESPLEGAR PARENIZQUIERDO expresion PARENDERECHO generarEscritura PUNTOYCOMA
    (149) texto -> . INSERTATEXTO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (150) rectangulo -> . INSERTARECTANGULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (152) circulo -> . INSERTACIRCULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (153) ovalo -> . INSERTAOVALO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (151) triangulo -> . INSERTATRIANGULO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (154) punto -> . INSERTAPUNTO getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (155) linea -> . INSERTALINEA getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (156) curva -> . INSERTACURVA getCurrentID buscarFuncion saveFunID PARENIZQUIERDO generateERA llamadapar PARENDERECHO verifyArgCount generateGoSub PUNTOYCOMA
    (74) asignacion -> . asignacionizq ASIGNACION insertarAsignacion exp setAssignment PUNTOYCOMA
    (127) condicion -> . SI PARENIZQUIERDO logico PARENDERECHO generarCond ENTONCES bloque condicionaux
    (141) ciclo -> . MIENTRAS insertarSalto PARENIZQUIERDO logico PARENDERECHO crearCiclo bloque crearRegreso
    (70) asignacionizq -> . ID saveVarID buscarId guardarId asignacionizqaux

    LLAVEDERECHO    reduce using rule 56 (bloqueaux -> .)
    ID              shift and go to state 60
    ENTRADA         shift and go to state 56
    DESPLEGAR       shift and go to state 45
    INSERTATEXTO    shift and go to state 51
    INSERTARECTANGULO shift and go to state 52
    INSERTACIRCULO  shift and go to state 54
    INSERTAOVALO    shift and go to state 67
    INSERTATRIANGULO shift and go to state 58
    INSERTAPUNTO    shift and go to state 41
    INSERTALINEA    shift and go to state 47
    INSERTACURVA    shift and go to state 46
    SI              shift and go to state 65
    MIENTRAS        shift and go to state 63

    asignacionizq                  shift and go to state 42
    texto                          shift and go to state 43
    bloqueaux                      shift and go to state 44
    ingreso                        shift and go to state 48
    triangulo                      shift and go to state 49
    ciclo                          shift and go to state 50
    estatuto                       shift and go to state 53
    condicion                      shift and go to state 55
    rectangulo                     shift and go to state 57
    ovalo                          shift and go to state 66
    punto                          shift and go to state 59
    circulo                        shift and go to state 61
    asignacion                     shift and go to state 62
    curva                          shift and go to state 64
    linea                          shift and go to state 68
    escritura                      shift and go to state 69

state 24

    (1) program -> PROGRAMA ID inicializar DOSPUNTOS declaracion function INICIO bloque . FIN generarCuadruplos

    FIN             shift and go to state 70


state 25

    (13) tiporegreso -> tipo .

    ID              reduce using rule 13 (tiporegreso -> tipo .)


state 26

    (22) function -> FUNCION resetScope tiporegreso . ID idFunctionCheck createGlobal PARENIZQUIERDO functionpam addParamCount PARENDERECHO bloquefun finishFun function

    ID              shift and go to state 71


state 27

    (14) tiporegreso -> VACIO .

    ID              reduce using rule 14 (tiporegreso -> VACIO .)


state 28

    (43) declaracion -> VAR tipo cteid_declaracion revisarId PUNTOYCOMA . countVar declaracion
    (45) countVar -> .

    VAR             reduce using rule 45 (countVar -> .)
    FUNCION         reduce using rule 45 (countVar -> .)
    INICIO          reduce using rule 45 (countVar -> .)
    ID              reduce using rule 45 (countVar -> .)
    ENTRADA         reduce using rule 45 (countVar -> .)
    DESPLEGAR       reduce using rule 45 (countVar -> .)
    INSERTATEXTO    reduce using rule 45 (countVar -> .)
    INSERTARECTANGULO reduce using rule 45 (countVar -> .)
    INSERTACIRCULO  reduce using rule 45 (countVar -> .)
    INSERTAOVALO    reduce using rule 45 (countVar -> .)
    INSERTATRIANGULO reduce using rule 45 (countVar -> .)
    INSERTAPUNTO    reduce using rule 45 (countVar -> .)
    INSERTALINEA    reduce using rule 45 (countVar -> .)
    INSERTACURVA    reduce using rule 45 (countVar -> .)
    SI              reduce using rule 45 (countVar -> .)
    MIENTRAS        reduce using rule 45 (countVar -> .)
    REGRESAR        reduce using rule 45 (countVar -> .)
    LLAVEDERECHO    reduce using rule 45 (countVar -> .)

    countVar                       shift and go to state 72

state 29

    (59) exp -> termino . checkExpTypes exp2
    (110) checkExpTypes -> .

    SUMA            reduce using rule 110 (checkExpTypes -> .)
    RESTA           reduce using rule 110 (checkExpTypes -> .)
    CORCHETEDER     reduce using rule 110 (checkExpTypes -> .)
    MENORQUE        reduce using rule 110 (checkExpTypes -> .)
    MAYORQUE        reduce using rule 110 (checkExpTypes -> .)
    MAYORIGUAL      reduce using rule 110 (checkExpTypes -> .)
    MENORIGUAL      reduce using rule 110 (checkExpTypes -> .)
    IGUAL           reduce using rule 110 (checkExpTypes -> .)
    DIFERENTE       reduce using rule 110 (checkExpTypes -> .)
    CONJUNCION      reduce using rule 110 (checkExpTypes -> .)
    DISYUNCION      reduce using rule 110 (checkExpTypes -> .)
    PARENDERECHO    reduce using rule 110 (checkExpTypes -> .)
    PUNTOYCOMA      reduce using rule 110 (checkExpTypes -> .)
    COMA            reduce using rule 110 (checkExpTypes -> .)

    checkExpTypes                  shift and go to state 73

state 30

    (121) factor -> PARENIZQUIERDO . crearFondoFalso logico PARENDERECHO quitarFondoFalso
    (125) crearFondoFalso -> .

    NO              reduce using rule 125 (crearFondoFalso -> .)
    NEGRO           reduce using rule 125 (crearFondoFalso -> .)
    GRIS            reduce using rule 125 (crearFondoFalso -> .)
    AZUL            reduce using rule 125 (crearFondoFalso -> .)
    AMARILLO        reduce using rule 125 (crearFondoFalso -> .)
    VERDE           reduce using rule 125 (crearFondoFalso -> .)
    ROJO            reduce using rule 125 (crearFondoFalso -> .)
    ROSA            reduce using rule 125 (crearFondoFalso -> .)
    NARANJA         reduce using rule 125 (crearFondoFalso -> .)
    PARENIZQUIERDO  reduce using rule 125 (crearFondoFalso -> .)
    ID              reduce using rule 125 (crearFondoFalso -> .)
    CENTERO         reduce using rule 125 (crearFondoFalso -> .)
    CFLOTANTE       reduce using rule 125 (crearFondoFalso -> .)
    CCADENA         reduce using rule 125 (crearFondoFalso -> .)
    CCARACTER       reduce using rule 125 (crearFondoFalso -> .)
    VERDADERO       reduce using rule 125 (crearFondoFalso -> .)
    FALSO           reduce using rule 125 (crearFondoFalso -> .)

    crearFondoFalso                shift and go to state 74

state 31

    (115) termino -> factor . checkTermTypes termino2
    (116) checkTermTypes -> .

    MULTIPLICACION  reduce using rule 116 (checkTermTypes -> .)
    DIVISION        reduce using rule 116 (checkTermTypes -> .)
    SUMA            reduce using rule 116 (checkTermTypes -> .)
    RESTA           reduce using rule 116 (checkTermTypes -> .)
    CORCHETEDER     reduce using rule 116 (checkTermTypes -> .)
    MENORQUE        reduce using rule 116 (checkTermTypes -> .)
    MAYORQUE        reduce using rule 116 (checkTermTypes -> .)
    MAYORIGUAL      reduce using rule 116 (checkTermTypes -> .)
    MENORIGUAL      reduce using rule 116 (checkTermTypes -> .)
    IGUAL           reduce using rule 116 (checkTermTypes -> .)
    DIFERENTE       reduce using rule 116 (checkTermTypes -> .)
    CONJUNCION      reduce using rule 116 (checkTermTypes -> .)
    DISYUNCION      reduce using rule 116 (checkTermTypes -> .)
    PARENDERECHO    reduce using rule 116 (checkTermTypes -> .)
    PUNTOYCOMA      reduce using rule 116 (checkTermTypes -> .)
    COMA            reduce using rule 116 (checkTermTypes -> .)

    checkTermTypes                 shift and go to state 75

state 32

    (30) cte -> CFLOTANTE .

    MULTIPLICACION  reduce using rule 30 (cte -> CFLOTANTE .)
    DIVISION        reduce using rule 30 (cte -> CFLOTANTE .)
    SUMA            reduce using rule 30 (cte -> CFLOTANTE .)
    RESTA           reduce using rule 30 (cte -> CFLOTANTE .)
    COMA            reduce using rule 30 (cte -> CFLOTANTE .)
    PARENDERECHO    reduce using rule 30 (cte -> CFLOTANTE .)
    CONJUNCION      reduce using rule 30 (cte -> CFLOTANTE .)
    DISYUNCION      reduce using rule 30 (cte -> CFLOTANTE .)
    CORCHETEDER     reduce using rule 30 (cte -> CFLOTANTE .)
    MENORQUE        reduce using rule 30 (cte -> CFLOTANTE .)
    MAYORQUE        reduce using rule 30 (cte -> CFLOTANTE .)
    MAYORIGUAL      reduce using rule 30 (cte -> CFLOTANTE .)
    MENORIGUAL      reduce using rule 30 (cte -> CFLOTANTE .)
    IGUAL           reduce using rule 30 (cte -> CFLOTANTE .)
    DIFERENTE       reduce using rule 30 (cte -> CFLOTANTE .)
    PUNTOYCOMA      reduce using rule 30 (cte -> CFLOTANTE .)


state 33

    (29) cte -> CENTERO .
